fix ogp image url

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
       property="og:description"
       content="グラブルのスクショの切り取りを補助するツールです。"
     />
-    <meta
-      property="og:image"
-      content="https://eriri.net/gbf-image/og_image.png"
-    />
+    <meta property="og:image" content="https://eriri.net/gbf-image/ogp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <!-- Google tag (gtag.js) -->
     <script
